<resources>
    <string name="app_name">Lab02</string>
    <string name="reservar_mesa">Reservar mesa</string>
    <string name="delivery">Delivery</string>
    <string name="app_titulo">Pedite la cena!!</string>
    <string name="seleccione_horario">Seleccione el horario</string>
    <string name="notificar_reserva">Notificar reserva 1 hora antes</string>
    <string name="no_hay_items">No hay ningún item en el pedido</string>
    <string name="plato">Plato</string>
    <string name="postre">Postre</string>
    <string name="bebida">Bebida</string>
    <string name="agregar">Agregar</string>
    <string name="pagar_pedido">Pagar Pedido</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="error_ya_confirmado">El pedido ya fue realizado.</string>
    <string name="error_empty">No ha seleccionado ningun plato</string>
    <string name="nombre">Nombre y Apellido</string>
    <string name="email">Email</string>
    <string name="visa_master_american">VISA, MasterCard o American</string>
    <string name="num_tarjeta_placeholder">xxxx-xxxx-xxxx-xxxx</string>
    <string name="confirmar_pago">Confirmar pago</string>
    <string name="cancelar">Cancelar</string>
    <string name="postre_ya_agregado">Postre ya agregado. Pulse Reiniciar para cambiar pedido.</string>
    <string name="principal_ya_agregado">Principal ya agregado. Pulse Reiniciar para cambiar pedido.</string>
    <string name="bebida_ya_agregada">Bebida ya agregada. Pulse Reiniciar para cambiar pedido.</string>
    <string name="mm_aa">MM/AA</string>
    <string name="pago_confirmado">El pago fue confirmado. Monto: %1$.2f</string>
    <string name="pago_cancelado">El pago fue cancelado</string>
    <string name="campos_incompletos">Complete todos los campos</string>
</resources>
