<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gruporebechi_garcialozano.dam.isi.frsf.lab02.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_titulo" />

            <ToggleButton
                android:id="@+id/tgbtn_reserva_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/"
                android:textOff="@string/reservar_mesa"
                android:textOn="@string/delivery" />

            <TextView
                android:id="@+id/txtview_seleccione_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccione_horario" />

            <Spinner
                android:id="@+id/spinner_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switch_notificar_reserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificar_reserva" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:text="@string/no_hay_items" />

            <RadioGroup
                android:id="@+id/radiogrp_tipo_plato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radiobtn_plato"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobtn_plato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plato" />

                <RadioButton
                    android:id="@+id/radiobtn_postre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/postre" />

                <RadioButton
                    android:id="@+id/radiobtn_bebida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bebida" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_agregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/agregar" />

                <Button
                    android:id="@+id/btn_confirmar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirmar_pedido" />

                <Button
                    android:id="@+id/btn_reinicar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reiniciar" />
            </LinearLayout>

            <ListView
                android:id="@+id/listview_items_pedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
